--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+- degree: Material Science & Engineering  
+  uni: Purdon't
+  year: May, 2001 &mdash; January, 2015
+  # awards: All of them
+  # summary: No one is better than this place
